Name:           netslum
Version:        0.0.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        MIT
License-File:   LICENSE
Author:         Alessandro Gatti
Maintainer:     zikyky@gmail.com
Homepage:       https://github.com/Hamcha/netslum
Category:       Web, Games
Synopsis:       A telnet server to play Paradise from terminals

Executable netslum
    main-is: Main.hs

    Build-depends:
        base        ==4.*,
        bytestring  >=0.9 && < 0.11,
        containers   <0.6,
        HTTP         <4001,
        aeson        <0.8,
        network      <2.5,
        regex-pcre   <1.0

Source-Repository head
    type:       git
    location:   git://github.com/Hamcha/netslum.git